Update prometheus to version 1.4.3